--- a/ESCenter.Administrator/Views/Tutor/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Edit.cshtml
@@ -6,6 +6,8 @@
     List<string> roles = ViewData["Roles"] as List<string> ?? new List<string>();
     List<string> genders = ViewData["Genders"] as List<string> ?? new List<string>();
     List<string> academics = ViewData["AcademicLevels"] as List<string> ?? new List<string>();
+    bool firstItem = true;
+    bool firstItem1 = true;
 }
 <h1>Edit</h1>
 
@@ -141,24 +143,17 @@
 
 <div class="card">
     <div class="card-body">
-        <h5 class="card-title">Tutor Information</h5>
         <form class="row g-3" asp-action="EditTutorInformation" asp-route-id="@Model.Id" asp-controller="Tutor" onsubmit="return callPostActionWithForm(this);">
-
-            <!-- ----------------------------------- -->
-
             <h5 class="card-title">Tutor information</h5>
 
             <div class="col-md-4">
                 <label asp-for="AcademicLevel" class="form-label">Academic Level</label>
                 <select asp-for="AcademicLevel" class="form-select">
-                    <option selected>@Model.AcademicLevel.ToString()</option>
+                    <option selected>@Model.AcademicLevel</option>
 
-                    @foreach (var i in academics)
+                    @foreach (var i in academics.Where(i => i != Model.AcademicLevel))
                     {
-                        @if (i != Model.AcademicLevel)
-                        {
-                            <option> @i </option>
-                        }
+                        <option> @i </option>
                     }
                 </select>
                 <span asp-validation-for="AcademicLevel" class="text-danger"></span>
@@ -179,58 +174,150 @@
 
                 </div>
             </div>
-            <div class="card" id="tutorMajorCard">
-                <div class="card-body">
-                    <div class="card-title row">
-                        <h5 class="col-11">Tutor Subjects</h5>
-                        <button type="button" class="btn btn-primary col-1" onclick="OpenGetDialog('@Url.Action("Subjects", "Tutor", new { id = @Model.Id })','Add major for @Model.FirstName @Model.LastName')">
-                            <span class="bi bi-plus-circle"> </span>
-                            Add
-                        </button>
-
-                    </div>
-
-                    <!-- List group with Advanced Contents -->
-
-                    <div class="list-group" style="grid-template-columns: repeat(4,1fr); display: grid">
-                        @foreach (var s in Model.Majors)
-                        {
-                            @* <div class=" list-group-item list-group-item-action" id="@s.Id-item"> *@
-                            @*     <div class="row"> *@
-                            @*         <input name="Subjects" value="@s.Id" hidden="hidden"/> *@
-                            @*         <div class="d-flex w-100 justify-content-between"> *@
-                            @*             <h5 class="mb-1">@s.Name</h5> *@
-                            @*         </div> *@
-                            @*         <button type="button" class="col-1 btn btn-danger" onclick="RemoveMajorSubject('@s.Id')">Remove</button> *@
-                            @* *@
-                            @*     </div> *@
-                            @* </div> *@
-                            <li class="list-group-item" style="border: none">
-                                <input name="Subjects" value="@s.Id" hidden="hidden"/>
-                                <input class="form-check-input" type="checkbox" checked="@s.IsSelected"/>
-                                <label class="form-check-label">@s.Name</label>
-                            </li>
-                        }
-                    </div><!-- End List group Advanced Content -->
-                </div>
-            </div>
-
-
-            <!-- ----------------------------------- hidden info -->
 
             <input type="hidden" asp-for="Id"/>
             <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                <a asp-action="EditVerification" asp-route-id="@Model.Id" class="btn btn-primary">
-                    Tutor Verifications
-                </a>
-                <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+                <button type="submit" class="btn btn-primary">Edit</button>
             </div>
         </form><!-- End Multi Columns Form -->
-
     </div>
 </div>
 
+<div class="card">
+
+    <div class="card-body">
+        <h5 class="card-title">Edit Tutor Majors</h5>
+
+        <form class="row g-3" asp-action="EditTutorMajors" asp-route-tutorId="@Model.Id" asp-controller="Tutor" onsubmit="return callPostActionWithForm(this);">
+
+            <!-- List group with Advanced Contents -->
+            <div class="list-group" style="grid-template-columns: repeat(4,1fr); display: grid">
+                @foreach (var s in Model.Majors)
+                {
+                    <li class="list-group-item" style="border: none">
+                        @if (s.IsSelected)
+                        {
+                            <input class="form-check-input" type="checkbox" name="majorIds" value="@s.Id" checked="checked"/>
+                        }
+                        else
+                        {
+                            <input class="form-check-input" name="majorIds" value="@s.Id" type="checkbox"/>
+                        }
+                        <label class="form-check-label">@s.Name</label>
+                    </li>
+                }
+            </div><!-- End List group Advanced Content -->
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">Verification Information</h5>
+        <form class="row g-3" asp-action="" asp-controller="Tutor" onsubmit="return callPostActionWithForm(this);" style="display: flex; justify-content: center;">
+            <div class="card w-50">
+                <div class="card-body">
+                    <!-- Slides with indicators -->
+                    <div id="carouselExampleIndicators" class="carousel slide pointer-event" data-bs-ride="carousel">
+
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+                        </div>
+
+                        <div class="carousel-inner">
+                            @foreach (var s in Model.VerificationDtos)
+                            {
+                                @if (firstItem)
+                                {
+                                    <div class="carousel-item active">
+                                        <img src="@s.Image" class="d-block w-100" alt="...">
+                                    </div>
+                                    firstItem = false;
+                                }
+                                else
+                                {
+                                    <div class="carousel-item ">
+                                        <img src="@s.Image" class="d-block w-100" alt="...">
+                                    </div>
+                                }
+                            }
+                        </div>
+
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div><!-- End Slides with indicators -->
+                </div>
+            </div>
+        </form><!-- End Multi Columns Form -->
+    </div>
+</div>
+@if (Model.ChangeVerificationRequestDto != null)
+{
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Change Verification Information</h5>
+            <form class="row g-3" asp-action="ModifyChangeVerificationRequest" asp-route-tutorId="@Model.Id" asp-controller="Tutor" style="display: flex; justify-content: center;">
+                <div class="card w-50">
+                    <div class="card-body">
+                        <!-- Slides with indicators -->
+                        <div id="carouselExampleIndicators1" class="carousel slide pointer-event" data-bs-ride="carousel">
+
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+                            </div>
+
+                            <div class="carousel-inner">
+                                @foreach (var s in Model.ChangeVerificationRequestDto.ChangeVerificationRequestDetails)
+                                {
+                                    @if (firstItem1)
+                                    {
+                                        <div class="carousel-item active">
+                                            <img src="@s" class="d-block w-100" alt="...">
+                                        </div>
+                                        firstItem1 = false;
+                                    }
+                                    else
+                                    {
+                                        <div class="carousel-item ">
+                                            <img src="@s" class="d-block w-100" alt="...">
+                                        </div>
+                                    }
+                                }
+                            </div>
+
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div><!-- End Slides with indicators -->
+                    </div>
+                </div>
+
+                <button id="btnAcceptAll" name="isApproved" value="true" type="submit" class="btn btn-primary">Approve</button>
+                <button id="btnRejectAll" name="isApproved" value="false" type="submit" class="btn btn-danger">Reject</button>
+            </form><!-- End Multi Columns Form -->
+        </div>
+    </div>
+}
 
 @section Scripts {
     @{
