--- a/ESCenter.Administrator/Views/Tutor/EditVerification.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/EditVerification.cshtml
@@ -1,4 +1,4 @@
-﻿@model ESCenter.Application.Contracts.Users.Tutors.TutorVerificationInfoForEditDto
+﻿@model ESCenter.Application.Contracts.Users.Tutors.VerificationEditDto
 
 @{
     ViewData["Title"] = "Edit";
@@ -35,7 +35,7 @@
                     <div class="col-md-8 col-lg-9">
                         <div class="row d-flex" id="filesInputValues">
 
-                            @foreach (var i in Model.TutorVerificationInfoDtos)
+                            @foreach (var i in Model.VerificationDtos)
                             {
                                 //<img src="@i.Image" style="max-width: 400px; max-height: 400px;" alt="Profile" id="avatar">
                                 //<input id="image" asp-for="@i.Image" hidden type="text" />
@@ -56,7 +56,7 @@
 
                             @foreach (var i in Model.ChangeVerificationRequestDtos)
                             {
-                                <form class="row g-3" asp-action="EditTutorVerificationInformation" asp-route-changeVerificationRequestId="@i.Id" asp-controller="Tutor">
+                                <form class="row g-3" asp-action="EditVerification" asp-route-changeVerificationRequestId="@i.Id" asp-controller="Tutor">
 
                                     <button type="submit" style="align-self: baseline;" class="btn btn-primary">
                                         <span>Accept</span>
