--- a/ESCenter.Administrator/Views/User/Student.cshtml
+++ b/ESCenter.Administrator/Views/User/Student.cshtml
@@ -6,7 +6,7 @@
     <h1>User Management</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Students</li>
+            <li class="breadcrumb-item active">Learner</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
@@ -14,7 +14,7 @@
 <a type="button" class="btn btn-success rounded-pill" asp-action="Create" asp-controller="User">Create</a>
 <div class="card">
     <div class="card-body">
-        <div class="card-title">Student</div>
+        <div class="card-title">Learner</div>
 
 
         <!-- Table with stripped rows -->
