--- a/ESCenter.Administrator/Views/Home/_TotalStudents.cshtml
+++ b/ESCenter.Administrator/Views/Home/_TotalStudents.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TotalValueModel<ESCenter.Application.Contracts.Users.BasicUsers.UserForListDto>
 
 <!-- Change Password Form -->
-<h5 class="card-title">Students <span>| @Model.Time </span></h5>
+<h5 class="card-title">Learner <span>| @Model.Time </span></h5>
 
 <div class="d-flex align-items-center">
     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
