--- a/ESCenter.Administrator/Views/Shared/_Layout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_Layout.cshtml
@@ -1,15 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor
 @{
-    string image = HttpContextAccessor.HttpContext?.Session.GetString("image") ?? "default_avatar1.png";
-    string name = HttpContextAccessor.HttpContext?.Session.GetString("name") ?? "unknown";
+    var image = HttpContextAccessor.HttpContext?.Session.GetString("image") ?? "default_avatar1.png";
+    var name = HttpContextAccessor.HttpContext?.Session.GetString("name") ?? "unknown";
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - EduSmart</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -39,229 +39,228 @@
 
 </head>
 <body>
-    <header id="header" class="header fixed-top d-flex align-items-center">
-        <div class="d-flex align-items-center justify-content-between">
-            <a href="/home" class="logo d-flex align-items-center">
-                <img src="~/assets/img/logo.png" alt="">
-                <span class="d-none d-lg-block">EduSmart Website</span>
-            </a>
-            <i class="bi bi-list toggle-sidebar-btn"></i>
-        </div><!-- End Logo -->
+<header id="header" class="header fixed-top d-flex align-items-center">
+    <div class="d-flex align-items-center justify-content-between">
+        <a href="/home" class="logo d-flex align-items-center">
+            <img src="~/assets/img/logo.png" alt="">
+            <span class="d-none d-lg-block">EduSmart Website</span>
+        </a>
+        <i class="bi bi-list toggle-sidebar-btn"></i>
+    </div><!-- End Logo -->
 
-        <nav class="header-nav ms-auto">
-            <ul class="d-flex align-items-center">
+    <nav class="header-nav ms-auto">
+        <ul class="d-flex align-items-center">
 
-                <li class="nav-item d-block d-lg-none">
-                    <a class="nav-link nav-icon search-bar-toggle " href="#">
-                        <i class="bi bi-search"></i>
-                    </a>
-                </li><!-- End Search Icon-->
-
-                <li class="nav-item dropdown pe-3">
-
-                    <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="@image" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">@name</span>
-                    </a><!-- End Profile Iamge Icon -->
-
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                        <li class="dropdown-header">
-                            <h6>@name</h6>
-                            <span>Administrator</span>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/profile">
-                                <i class="bi bi-person"></i>
-                                <span>My Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-
-                        <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/logout">
-                                <i class="bi bi-box-arrow-right"></i>
-                                <span>Sign Out</span>
-                            </a>
-                        </li>
-
-                    </ul><!-- End Profile Dropdown Items -->
-                </li><!-- End Profile Nav -->
-
-            </ul>
-        </nav><!-- End Icons Navigation -->
-    </header>
-    <aside id="sidebar" class="sidebar">
-
-        <ul class="sidebar-nav " id="sidebar-nav">
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/home">
-                    <i class="bi bi-grid"></i>
-                    <span>Dashboard</span>
+            <li class="nav-item d-block d-lg-none">
+                <a class="nav-link nav-icon search-bar-toggle " href="#">
+                    <i class="bi bi-search"></i>
                 </a>
-            </li><!-- End Dashboard Nav -->
+            </li><!-- End Search Icon-->
 
-            <li class="nav-item">
-                <a class="nav-link collapsed">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>User Management</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="/user">
-                            <i class="bi bi-circle"></i><span>General</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-action="Index" asp-controller="Tutor">
-                            <i class="bi bi-circle"></i><span>Tutor</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/user/student">
-                            <i class="bi bi-circle"></i><span>Student</span>
-                        </a>
-                    </li>
-                </ul>
-            </li><!-- End Tables Nav -->
+            <li class="nav-item dropdown pe-3">
 
-            <li class="nav-item">
-                <a class="nav-link collapsed">
-                    <i class="bi bi-info-square"></i>
-                    <span>Class Information</span>
-                </a>
-                <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+                    <img src="@image" alt="Profile" class="rounded-circle">
+                    <span class="d-none d-md-block dropdown-toggle ps-2">@name</span>
+                </a><!-- End Profile Iamge Icon -->
+
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+                    <li class="dropdown-header">
+                        <h6>@name</h6>
+                        <span>Administrator</span>
+                    </li>
                     <li>
-                        <a asp-action="Index" asp-controller="Course">
-                            <i class="bi bi-circle"></i><span>All</span>
+                        <hr class="dropdown-divider">
+                    </li>
+
+                    <li>
+                        <a class="dropdown-item d-flex align-items-center" href="/profile">
+                            <i class="bi bi-person"></i>
+                            <span>My Profile</span>
                         </a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="Course" asp-route-type="Verifying">
-                            <i class="bi bi-circle"></i><span>Verifying</span>
-                        </a>
+                        <hr class="dropdown-divider">
                     </li>
+
+
                     <li>
-                        <a asp-action="Index" asp-controller="Course" asp-route-type="Purchasing">
-                            <i class="bi bi-circle"></i><span>Purchasing</span>
-                        </a>
+                        <hr class="dropdown-divider">
                     </li>
+
                     <li>
-                        <a asp-action="Index" asp-controller="Course" asp-route-type="Today">
-                            <i class="bi bi-circle"></i><span>Today</span>
+                        <a class="dropdown-item d-flex align-items-center" href="/logout">
+                            <i class="bi bi-box-arrow-right"></i>
+                            <span>Sign Out</span>
                         </a>
                     </li>
-                </ul>
-            </li><!-- End Subject Nav -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/subject">
-                    <i class="bi bi-journal-bookmark"></i>
-                    <span>Subject</span>
-                </a>
-            </li><!-- End Subject Nav -->
 
-            <li class="nav-heading">Pages</li>
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/profile">
-                    <i class="bi bi-person"></i>
-                    <span>Profile</span>
-                </a>
-            </li><!-- End Profile Page Nav -->
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="/logout">
-                    <i class="bi bi-box-arrow-in-right"></i>
-                    <span>Logout</span>
-                </a>
-            </li><!-- End Login Page Nav -->
-
+                </ul><!-- End Profile Dropdown Items -->
+            </li><!-- End Profile Nav -->
 
         </ul>
+    </nav><!-- End Icons Navigation -->
+</header>
+<aside id="sidebar" class="sidebar">
 
-    </aside><!-- End Sidebar-->
-    <main role="main" id="main" class="main">
-        @RenderBody()
-    </main>
+    <ul class="sidebar-nav " id="sidebar-nav">
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/home">
+                <i class="bi bi-grid"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
 
-    <div class="modal fade" id="verticalycentered" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Vertically Centered Dialog's Title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Are you sure with this process?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <form id="confirmDialogForm" onsubmit="return callPostActionWithForm(this);">
-                        <button type="submit" class="btn btn-primary">Confirm</button>
-                    </form>
-                </div>
+        <li class="nav-item">
+            <a class="nav-link collapsed">
+                <i class="bi bi-layout-text-window-reverse"></i><span>User Management</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <li>
+                    <a href="/user">
+                        <i class="bi bi-circle"></i><span>Learner</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="Tutor">
+                        <i class="bi bi-circle"></i><span>Tutor</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Tables Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed">
+                <i class="bi bi-info-square"></i>
+                <span>Class Information</span>
+            </a>
+            <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+                <li>
+                    <a asp-action="Index" asp-controller="Course">
+                        <i class="bi bi-circle"></i><span>All</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="Course" asp-route-type="Verifying">
+                        <i class="bi bi-circle"></i><span>Verifying</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="Course" asp-route-type="Purchasing">
+                        <i class="bi bi-circle"></i><span>Purchasing</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Index" asp-controller="Course" asp-route-type="Today">
+                        <i class="bi bi-circle"></i><span>Today</span>
+                    </a>
+                </li>
+            </ul>
+        </li><!-- End Subject Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/subject">
+                <i class="bi bi-journal-bookmark"></i>
+                <span>Subject</span>
+            </a>
+        </li><!-- End Subject Nav -->
+
+        <li class="nav-heading">Pages</li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/profile">
+                <i class="bi bi-person"></i>
+                <span>Profile</span>
+            </a>
+        </li><!-- End Profile Page Nav -->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="/logout">
+                <i class="bi bi-box-arrow-in-right"></i>
+                <span>Logout</span>
+            </a>
+        </li><!-- End Login Page Nav -->
+
+
+    </ul>
+
+</aside><!-- End Sidebar-->
+<main role="main" id="main" class="main">
+    @RenderBody()
+</main>
+
+<div class="modal fade" id="verticalCentered" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Vertically Centered Dialog's Title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure with this process?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <form id="confirmDialogForm" onsubmit="return callPostActionWithForm(this);">
+                    <button type="submit" class="btn btn-primary">Confirm</button>
+                </form>
             </div>
         </div>
-    </div><!-- End Vertically centered Modal-->
+    </div>
+</div><!-- End Vertically centered Modal-->
 
-    <button type="button" hidden class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#largeModal" id="modalTriggerButton">
-        Large Modal
-    </button>
+<button type="button" hidden class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#largeModal" id="modalTriggerButton">
+    Large Modal
+</button>
 
-    <div class="modal fade" id="largeModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Large Modal</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
-                </div>
-                @*    <div class="modal-footer">
+<div class="modal fade" id="largeModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Large Modal</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Non omnis incidunt qui sed occaecati magni asperiores est mollitia. Soluta at et reprehenderit. Placeat autem numquam et fuga numquam. Tempora in facere consequatur sit dolor ipsum. Consequatur nemo amet incidunt est facilis. Dolorem neque recusandae quo sit molestias sint dignissimos.
+            </div>
+            @*    <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary">Save changes</button>
                 </div>*@
-            </div>
         </div>
-    </div><!-- End Large Modal-->
+    </div>
+</div><!-- End Large Modal-->
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - CED.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+<div id="preloader">
+    <div class="loader"></div>
+</div>
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
-        <i class="bi bi-arrow-up-short"></i>
-    </a>
+<footer class="border-top footer text-muted">
+    <div class="container">
+        &copy; 2023 - CED.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    </div>
+</footer>
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <!-- Vendor JS Files -->
-    <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
-    <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    @* <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
-    <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
-    <script src="~/assets/vendor/echarts/echarts.min.js"></script>
-    <script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
-    <script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+</a>
 
-    <!-- Template Main JS File -->
-    <script src="~/assets/js/main.js"></script>
-    <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/dashboard.js" asp-append-version="true"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<!-- Vendor JS Files -->
+<script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+@* <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
+<script src="~/assets/vendor/chart.js/chart.umd.js"></script>
+<script src="~/assets/vendor/echarts/echarts.min.js"></script>
+<script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<!-- Template Main JS File -->
+<script src="~/assets/js/main.js"></script>
+<script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/dashboard.js" asp-append-version="true"></script>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
