--- a/ESCenter.Administrator/Views/Subject/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Subject/Edit.cshtml
@@ -44,15 +44,11 @@
             <input type="hidden" asp-for="Id" />
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a type="reset" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
                 <a type="reset" asp-action="Index" class="btn btn-secondary">Cancel</a>
             </div>
             @Html.AntiForgeryToken()
         </form><!-- End Multi Columns Form -->
-        <form asp-action="DeleteConfirm" asp-controller="Subject">
-            <button type="submit" class="btn btn-danger">Delete</button>
-            <input type="hidden" asp-for="Id" />
-
-        </form>
     </div>
 </div>
 
