--- a/ESCenter.Administrator/Views/Course/Detail.cshtml
+++ b/ESCenter.Administrator/Views/Course/Detail.cshtml
@@ -34,10 +34,10 @@
             @Html.DisplayFor(model => model.AcademicLevelRequirement)
         </dd>
         <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.Fee)
+            @Html.DisplayNameFor(model => model.SectionFee)
         </dt>
         <dd class="col-sm-8">
-            @Html.DisplayFor(model => model.Fee)
+            @Html.DisplayFor(model => model.SectionFee)
         </dd>
         <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.ChargeFee)
@@ -64,10 +64,10 @@
             @Html.DisplayFor(model => model.NumberOfLearner)
         </dd>
         <dt class="col-sm-4">
-            @Html.DisplayNameFor(model => model.MinutePerSession)
+            @Html.DisplayNameFor(model => model.SessionDuration)
         </dt>
         <dd class="col-sm-8">
-            @Html.DisplayFor(model => model.MinutePerSession)
+            @Html.DisplayFor(model => model.SessionDuration)
         </dd>
         <dt class="col-sm-4" hidden>
             @Html.DisplayNameFor(model => model.SessionPerWeek)
