--- a/ESCenter.Administrator/Views/Tutor/Edit.cshtml
+++ b/ESCenter.Administrator/Views/Tutor/Edit.cshtml
@@ -220,7 +220,7 @@
     <div class="card-body">
         <h5 class="card-title">Verification Information</h5>
         <form class="row g-3" asp-action="" asp-controller="Tutor" onsubmit="return callPostActionWithForm(this);" style="display: flex; justify-content: center;">
-            <div class="card w-50">
+            <div class="card w-50 h-75 ">
                 <div class="card-body">
                     <!-- Slides with indicators -->
                     <div id="carouselExampleIndicators" class="carousel slide pointer-event" data-bs-ride="carousel">
@@ -244,7 +244,7 @@
                                 else
                                 {
                                     <div class="carousel-item ">
-                                        <img src="@s.Image" class="d-block w-100" alt="...">
+                                        <img src="@s.Image" class="d-block w-100" style="" alt="...">
                                     </div>
                                 }
                             }
