--- a/ESCenter.Administrator/Views/Course/Index.cshtml
+++ b/ESCenter.Administrator/Views/Course/Index.cshtml
@@ -7,7 +7,7 @@
     <h1>Course Management</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item active">Course</li>
+            <li class="breadcrumb-item active">/Course</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
@@ -18,20 +18,15 @@
             <a type="button" class="btn btn-success" asp-action="Create" asp-controller="Course">Create</a>
         </div>
 
-
         <!-- Table with stripped rows -->
         <table id="example" class="table datatable">
             <thead>
             <tr>
-
                 <th scope="col">#</th>
                 <th scope="col">Title</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Status</th>
-                <th scope="col">Academic Level</th>
-                <th scope="col">Gender Requirement</th>
-                <th scope="col">Learning mode</th>
-                <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
+                <th data-sortable="false" scope="col">Actions</th>
 
             </tr>
             </thead>
@@ -45,16 +40,19 @@
                         <input hidden name="Id" value="@user.Id"/>
                         @i
                     </th>
-                    <td>@user.Title</td>
+                    @if(user.Title.Length > 30)
+                    {
+                        <td>@user.Title[..30] ...</td>
+                    }
+                    else
+                    {
+                        <td>@user.Title</td>
+                    }
                     <td>@user.SubjectName</td>
                     <td>@user.Status</td>
-                    <td>@user.AcademicLevelRequirement</td>
-                    <td>@user.GenderRequirement</td>
-                    <td>@user.LearningMode</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>|
                         <a asp-action="Detail" asp-route-id="@user.Id">Details</a> |
-
                         <a href="#" onclick="OpenGetDialog('@Url.Action("Delete", "Course", new { id = @user.Id })','Are you sure you want to delete this class?');">Delete</a>
                     </td>
                 </tr>
