--- a/ESCenter.Administrator/Views/Course/_PickTutor.cshtml
+++ b/ESCenter.Administrator/Views/Course/_PickTutor.cshtml
@@ -1,8 +1,7 @@
-﻿@model List<ESCenter.Application.Contracts.Users.Tutors.TutorForListDto>
+﻿@model IEnumerable<ESCenter.Application.Contracts.Users.BasicUsers.UserForListDto>
 @{
     int i = 0;
     Layout = "_ScriptLayout";
-
 }
 
 <div class="card">
@@ -13,11 +12,8 @@
         <table id="example" class="table datatable">
             <thead>
             <tr>
-                <!-- a avatar comlumn will be added -->
                 <th scope="col">#</th>
                 <th scope="col">Full Name</th>
-                <th scope="col">Academic Level</th>
-                <th scope="col">University</th>
                 <th scope="col">Phone Number</th>
                 <th data-sortable="false" scope="col" style="width:30%;">Actions</th>
             </tr>
@@ -33,8 +29,6 @@
                         @i
                     </th>
                     <td>@user.FirstName @user.LastName</td>
-                    <td>@user.AcademicLevel.ToString()</td>
-                    <td>@user.University</td>
                     <td>@user.PhoneNumber</td>
                     <td>
                         <button type="button" class="btn btn-primary" onclick="ChooseTutor('@user.Id','@user.FirstName @user.LastName', '@user.PhoneNumber');">
