--- a/ESCenter.Administrator/Views/Profile/_ChangePassword.cshtml
+++ b/ESCenter.Administrator/Views/Profile/_ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ESCenter.Application.ServiceImpls.Accounts.Commands.ChangePassword.ChangePasswordCommand
 
 <!-- Change Password Form -->
-<form asp-action="ChangePassword" asp-controller="Profile" onsubmit="return callPostActionWithForm(this);">
+<form asp-action="ChangePassword" asp-controller="Profile">
     <input asp-for="Id" hidden />
 
     <div class="row mb-3">
