--- a/ESCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
+++ b/ESCenter.Administrator/Views/Profile/_ProfileOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model ESCenter.Application.Contracts.Users.Learners.LearnerForProfileDto
+﻿@model ESCenter.Application.Contracts.Profiles.UserProfileDto
 
 
 <h5 class="card-title">About</h5>
@@ -28,7 +28,7 @@
 
 <div class="row">
     <div class="col-lg-3 col-md-4 label">Address</div>
-    <div class="col-lg-9 col-md-8">@Model.Address</div>
+    <div class="col-lg-9 col-md-8">@Model.City @Model.Country</div>
 </div>
 
 <div class="row">
