--- a/ESCenter.Administrator/Views/Shared/_ScriptLayout.cshtml
+++ b/ESCenter.Administrator/Views/Shared/_ScriptLayout.cshtml
@@ -1,9 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor
-@{
-    string image = HttpContextAccessor.HttpContext?.Session.GetString("image") ?? "default_avatar1.png";
-    string name = HttpContextAccessor.HttpContext?.Session.GetString("name") ?? "unknown";
-}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,9 +7,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>EduSmart</title>
-    @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/CED.Web.styles.css" asp-append-version="true" />*@
+   
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -26,40 +20,42 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="~/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="~/assets/vendor/simple-datatables/style.css" rel="stylesheet">
     <link href="~/assets/vendor/alertifyjs/css/alertify.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
+    @await RenderSectionAsync("Styles", required: false)
 
 </head>
 <body>
 
-
 @RenderBody()
-
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
 </a>
 
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <!-- Vendor JS Files -->
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-
 <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
 <script src="~/assets/vendor/echarts/echarts.min.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/assets/vendor/simple-datatables/simple-datatables.js"></script>
 <script src="~/assets/vendor/alertifyjs/alertify.min.js"></script>
+
 <!-- Template Main JS File -->
 <script src="~/assets/js/main.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/dashboard.js" asp-append-version="true"></script>
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
