--- a/ESCenter.Administrator/Views/Home/_TotalClasses.cshtml
+++ b/ESCenter.Administrator/Views/Home/_TotalClasses.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TotalValueModel<ESCenter.Admin.Application.DashBoards.MetricObject>
 
 <!-- Change Password Form -->
-<h5 class="card-title">Classes <span>| @Model.Time </span></h5>
+<h5 class="card-title">Classes <span>| @(Model.Time) </span></h5>
 
 <div class="d-flex align-items-center">
     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
